tdf#112646 Flush the clipboard holding SolarMutex

It seems Desktop::terminate can be called with or without the
SolarMutex. So make sure we actually hold the mutex to release it
correctly when flushing the clipboard on termination.

Change-Id: Ie42daf5dba0f4208318a8c1fe463cd3a80dd9141